Second_Step/data/43/174/compilation.txt
IntegerProfile.java:39: error: ')' expected
    return(Math.max(si)
                       ^
IntegerProfile.java:42: error: reached end of file while parsing
}
 ^
2 errors
